Add support for automatically create dashboard IDs
